--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="static/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="static/libs/wangeditor/css/wangEditor.min.css">
         <link rel="stylesheet" href="static/libs/highlight/styles/github.css">
+        <script src="//cdn.bootcss.com/vue-resource/1.0.3/vue-resource.js" type="text/javascript" charset="utf-8"></script>
         <title>vue2-admin</title>
         <style>
             *{
@@ -26,7 +27,7 @@
         <script src='static/libs/highlight/highlightjs-line-numbers.min.js'></script>
         <script>
             $(function(){
-                
+
             });
         </script>
     </body>
