--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="static/libs/wangeditor/css/wangEditor.min.css">
         <link rel="stylesheet" href="static/libs/highlight/styles/github.css">
         <script src="//cdn.bootcss.com/vue-resource/1.0.3/vue-resource.js" type="text/javascript" charset="utf-8"></script>
-        <title>vue2-admin</title>
+        <title>vvboot</title>
         <style>
             *{
                 -webkit-box-sizing: border-box;
